Finalize package development and tested

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,8 @@ export(cluster_distances)
 export(convert_to_dissimilarity_matrix)
 export(create_pairwise_master)
 export(merge_cpgs)
-import(stats)
+export(visualize_clusters)
 import(doMC)
 import(dplyr)
 import(foreach)
+importFrom(stats,setNames)
