--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Tony Hui
 Maintainer: Tony Hui <hui.tony.zk@gmail.com>
 Description: Helper functions to do pairwise comparisons of commonly covered CpG
     sites in single-cell DNA Methylation data See publication () for more details
-License: What license is it under?
+License: None
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 5.0.1
@@ -18,4 +18,7 @@ Imports:
     tidyr,
     dplyr
 Suggests:
-    bsseq
+    bsseq,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
